Gestione più robusta per criptazione/decriptazione e aggiustamenti alla tabella